apps/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: headscale.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8080
  tls:
    - hosts:
        - headscale.sakul-flee.de
      secretName: headscale-sakul-flee-de-tls
